# Arch-engine

./: .gitignore  Archen.code-workspace  CMakeLists.txt  Makefile  test.sh
include/: Archen.hpp  app.hpp  color.hpp  core.hpp  engine.hpp  logging.hpp  mem_track.hpp  node.hpp  numerics.hpp  shapes.hpp  vector2.hpp
include/ArchenLib/: app.hpp  color.hpp  engine.hpp  event.hpp  func_container.hpp  logging.hpp  node.hpp  numerics.hpp  renderer.hpp  shapes.hpp  texture.hpp  window.hpp
scripts/: build.sh  cmake.sh  rebuild.sh  uninstall.sh
src/: app.cpp  color.cpp  core.cpp  engine.cpp  event.cpp  func_container.cpp  logging.cpp  mem_track.cpp  node.cpp  numerics.cpp  renderer.cpp  shapes.cpp  test.cpp  texture.cpp  window.cpp
